# SpiroLab

./: .gitignore  IDEES.md  README.md  a.json  link_fmedia.bash  requirements.txt  test.py
Dossier_candidature/: Déroulé_vidéo.md  Presentation_projet_SpiroLab.docx  Présentation_projet.md  modele2025_presentation-du-projet.docx  spirolab_presentation_projet.docx  ~$dele2025_presentation-du-projet.docx  ~$esentation_projet_SpiroLab.docx  ~$irolab_presentation_projet.docx
app/: main.py  pyproject.toml
app/audio/: __init__.py  getter.py  getter_new.py
app/formule/: __init__.py  colors_creator.py  easing.py  math.py  normalization.py  svg_creator.py
app/gui/: animation.py  bar.py  centered_canvas.py  custom_spiro_page.py  home_page.py  recorder_page.py  render.py  showroom_page.py  spirograph.py  state_provider.py
docs/: exemples.md  structure.md
dossier_candidature/: Présentation_projet.md
executable/SpiroLab-linux/: SpiroLab
proof-of-concept/: requirements.txt
proof-of-concept/app-test/: __main__.py  main.py
proof-of-concept/app-test/audio/: __init__.py  getter.py
proof-of-concept/app-test/formule/: fourier.py  math.py
proof-of-concept/graphic_elements/: welcome_page.py
proof-of-concept/src/: __main__.py  main.py
sources/: main.py  pyproject.toml
sources/audio/: getter.py
sources/formule/: colors_creator.py  easing.py  math.py  normalization.py  svg_creator.py
sources/gui/: custom_spiro_page.py  home_page.py  recorder_page.py  render.py  showroom_page.py
sources/gui/components/: centered_canvas.py  spirograph.py
(+16 files in other folders)
